# fastapi-crash-course

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 01fd863bff2f_.py  5a9d04a42153_move_is_active_to_user_table.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
database/: db_setup.py
database/models/: course.py  mixins.py  user.py
pydantic_schema/: course.py  user.py
